--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 group = 'net.hynse'
 version = '1.0-SNAPSHOT'
+
+// Load properties from gradle.properties
+def props = new Properties()
+file('gradle.properties').withInputStream { props.load(it) }
 
 repositories {
     mavenCentral()
@@ -15,10 +20,21 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = "jitpack"
+        url = "https://jitpack.io/"
+    }
+    maven {
+        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
+    }
 }
 
 dependencies {
-    compileOnly "io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT"
+    compileOnly "dev.folia:folia-api:1.20.1-R0.1-SNAPSHOT"
+    compileOnly 'me.clip:placeholderapi:2.11.5'
+    implementation 'org.mongodb:mongodb-driver-sync:5.0.0'
+    implementation 'com.github.NahuLD:folia-scheduler-wrapper:v0.0.2'
+    implementation "net.kyori:adventure-api:4.16.0"
 }
 
 def targetJavaVersion = 17
@@ -40,10 +56,38 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 processResources {
-    def props = [version: version]
+    // Add properties to be expanded in resource files
     inputs.properties props
     filteringCharset 'UTF-8'
     filesMatching('plugin.yml') {
         expand props
     }
+}
+
+// Configure the shadowJar task
+shadowJar {
+    // Define the desired JAR file name format
+    relocate 'org.mongodb', 'net.hynse.lib.mongodb'
+    relocate 'com.github.NahuLD', 'net.hynse.lib.scheduler-wrapper'
+    archiveFileName.set("${rootProject.name}-${version}.jar")
+}
+
+// Define a custom task to copy the shadow JAR file to the server location for the 'dev' build type
+task copyToServer(type: Exec) {
+    dependsOn shadowJar  // Make sure the 'shadowJar' task is executed first
+
+    // Use properties from gradle.properties
+    def sshKey = props['server.ssh.key']
+    def port = props['server.port']
+    def destinationDir = props['server.destination']
+
+    // Use the output directory and file name from the 'shadowJar' task
+    def jarFile = shadowJar.archiveFile.get().asFile
+
+    commandLine 'scp', '-i', sshKey, '-P', port, jarFile, destinationDir
+}
+
+// Add a new task for the 'dev' build type to copy the shadow JAR to the server
+tasks.register('dev') {
+    finalizedBy copyToServer
 }
